--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
-pytwitter==0.5
+Authlib==0.15.5
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.10
+cryptography==36.0.1
+dataclasses-json==0.5.6
+idna==3.3
+marshmallow==3.14.1
+marshmallow-enum==1.5.1
+mypy-extensions==0.4.3
+pycparser==2.21
+python-twitter-v2==0.7.2
+requests==2.27.1
+typing-extensions==4.0.1
+typing-inspect==0.7.1
+urllib3==1.26.8
