--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==21.4.0
 Authlib==0.15.5
 certifi==2021.10.8
 cffi==1.15.0
@@ -5,11 +6,14 @@ charset-normalizer==2.0.10
 cryptography==36.0.1
 dataclasses-json==0.5.6
 idna==3.3
+importlib-resources==5.4.0
+jsonschema==4.4.0
 marshmallow==3.14.1
 marshmallow-enum==1.5.1
 mypy-extensions==0.4.3
 oauthlib==3.1.1
 pycparser==2.21
+pyrsistent==0.18.1
 python-twitter-v2==0.7.2
 requests==2.27.1
 requests-oauthlib==1.3.0
@@ -17,3 +21,4 @@ tweepy==4.4.0
 typing-extensions==4.0.1
 typing-inspect==0.7.1
 urllib3==1.26.8
+zipp==3.7.0
